--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "lint": "prettier --write \"src/*\"",
+    "test": "jest",
+    "precommit": "yarn lint"
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-navigation": "^1.0.0-beta.21",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "husky": "^0.14.3",
     "jest": "21.2.1",
+    "prettier": "1.9.2",
     "react-test-renderer": "16.0.0"
   },
   "jest": {
