--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "lint": "prettier --write \"src/*\"",
+    "lint": "prettier --config ./prettierrc.yaml --write \"src/*\"",
     "test": "jest",
     "precommit": "yarn lint"
   },
