--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "lint": "prettier --config ./prettierrc.yaml --write \"src/*\"",
+    "lint": "prettier --config ./.prettierrc --write \"src/*\"",
     "test": "jest",
     "precommit": "yarn lint"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-navigation": "^1.0.0-beta.21",
@@ -16,8 +17,13 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.3",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.13.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.3.1",
     "husky": "^0.14.3",
     "jest": "21.2.1",
     "prettier": "1.9.2",
