--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-native": "0.51.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
@@ -27,7 +29,9 @@
     "husky": "^0.14.3",
     "jest": "21.2.1",
     "prettier": "1.9.2",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.0.0",
+    "reactotron-react-native": "^1.14.0",
+    "reactotron-redux": "^1.13.0"
   },
   "jest": {
     "preset": "react-native"
